--- a/index.html
+++ b/index.html
@@ -23,25 +23,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
  </head>
  <body>
-   <div class="bg_img">
-    <div class="logo">
-       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbPsYMAmgZL2joAxGPxKzZp1V87ouBWZEcAo-pT2s&s" alt="logo" width="150px">
-    </div>
-    <div class="text">
-       <h1><u>siksha 'o' anusandhan</u></h1>
-       <h4><em>(deemed to be university)</em></h4>
-       <h2><u>Institute of Technical Education and Research (ITER)</u></h2>
-    </div>
+  <div class="container text-center">
+    <div class="bg_img">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+           <div class="logo">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbPsYMAmgZL2joAxGPxKzZp1V87ouBWZEcAo-pT2s&s" alt="logo" width="150px">
+           </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+           <div class="text">
+               <h1><u>siksha 'o' anusandhan</u></h1>
+               <h4><em>(deemed to be university)</em></h4>
+               <h2><u>Institute of Technical Education and Research (ITER)</u></h2>
+           </div>
+        </div>
+     </div>
    </div>
-    <h3><u>cse department</u></h3>
-    <nav class="navbar navbar-expand-lg bg-info">
-       <div class="container-fluid">
-         <a class="navbar-brand" href="index.html">home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+  </div>
+  <h3><u>cse department</u></h3>
+  <nav class="navbar navbar-expand-lg bg-info">
+     <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav">
                <li class="nav-item">
                  <a class="nav-link active" aria-current="page" href="about.html">about</a>
                </li>
@@ -52,8 +60,8 @@
                   <a class="nav-link" href="alumni.html">alumni</a>
                </li>
             </ul>
-         </div>
-       </div>
+        </div>
+      </div>
     </nav>
     <br>
     <div class="container text-center">
