--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <style>
        .logo{
           position: relative;
-          left: 100px;      
+          left: auto;  
+          margin-top:50px;
+          margin-left:100px;
         }
        .text{
           position: relative;
-          left: 500px;
-          bottom: 150px;
+          left: auto;
+          bottom: 100px;
+          margin-left:250px;
         }
        h3{
          text-align: center;
