--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
        .logo{
           position: relative;
           left: auto;  
-          margin-top:50px;
-          margin-left:100px;
+          margin-top:30px;
         }
        .text{
           position: relative;
           left: auto;
-          bottom: 100px;
-          margin-left:250px;
+          margin-top:30px;
+          margin-right:auto;
         }
        h3{
          text-align: center;
@@ -26,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
  </head>
  <body>
-  <div class="container text-center">
+  <div class="container-fluid text-center">
     <div class="bg_img">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6">
